Mon, Feb 3, 2008
---------------------------------------------------------------------
- Added README.rdoc and sample database configuration files, updated sample users.
- Added :app_before_filter hook, extracted [web-to-lead] code and moved it to plugin.

Mon, Feb 2, 2008
---------------------------------------------------------------------
- Updated task related controller and view specs.
- Extracted sample plugin and moved it into separate Git repository.

Sun, Feb 1, 2008
---------------------------------------------------------------------
- SuperBowl!!
- Refactored tasks controller to offload most of sidebar and filter processing to task model.
- Impletented tasks/complete for pending tasks.

Sat, Jan 31, 2008
---------------------------------------------------------------------
- [Create new task] and [Assign new task] forms now save/restore their display state.
- Implemented task filtering for all three views.
- Added completion checkboxes and created initial implementation.

Fri, Jan 30, 2008
---------------------------------------------------------------------
- Ruby 1.9.1 final was released today!
- Added new named scopes to support assignments and completed tasks.
- Added sidebar filters for completed tasks.
- Added CSS styles for single-line lists and redesigned task templates.

Thu, Jan 29, 2008
---------------------------------------------------------------------
- Unpacked gem dependencies to /vendor/gems (ruby-openid, haml, and faker).
- Check whether database connection is available in [uses_mysql_uuid] plugin.
- Made task filters work for pending and assigned tasks.

Wed, Jan 28, 2008
---------------------------------------------------------------------
- Implemented task selector to switch between pending, assigned, and completed tasks.
- Major overhaul of task templates to support three task views.
- Changed rake's namespace from [app] to [crm].

Tue, Jan 27, 2008
---------------------------------------------------------------------