@@ -1,3 +1,4 @@
+<div style="width:480px; margin: auto;">
 <div class="standalone">
   <% form_for @authentication, :url => authentication_path do |f| %>
     <div class="title_menu">
@@ -13,23 +14,21 @@
       <!-- Username/password Login Form -->
       <div id="login"<%= @authentication.openid_identifier.blank? ? "" : %/ style="display:none;"/ %>>
         <div class="label">
-          Username: 
-          or <%= link_to_function "login using OpenID", %/$("login").toggle(); $("openid").toggle();/ %>
+          Username:
         </div>
-        <%= f.text_field :username, :style => "width:355px" %>
+        <%= f.text_field :username, :style => "width:355px; font-size:1.3em" %>
         <div class="label">
           Password:
         </div>
-        <%= f.password_field :password, :style => "width:355px" %>
+        <%= f.password_field :password, :style => "width:355px; font-size:1.3em" %>
       </div>
 
       <!-- OpenID Login Form -->
       <div id="openid"<%= @authentication.openid_identifier.blank? ? %/ style="display:none;"/ : "" %>>
         <div class="label">
           OpenID: 
-          or <%= link_to_function "login using username and password", %/$("login").toggle(); $("openid").toggle();/ %>
         </div>
-        <%= f.text_field :openid_identifier, :style => "width:355px" %>
+        <%= f.text_field :openid_identifier, :style => "width:355px; font-size:1.3em" %>
       </div>
 
       <div class="label">
@@ -41,8 +40,15 @@
     </div>
     
     <div class="buttonbar">
-      <%= f.submit "Login" %> or <%= link_to "Forgot password?", new_password_path %>
+      <%= f.submit "Login", :style => "font-size:1.2em" %> or <%= link_to "Forgot password?", new_password_path %>
     </div>
     
-  <% end %>
+  <% end -%>
 </div>
+<small id="login_link">
+  <%= link_to_function "Login using OpenID", %/$("login").toggle(); $("openid").toggle(); $("login_link").toggle(); $("openid_link").toggle(); $('authentication_openid_identifier').focus()/ %>
+</small>
+<small id="openid_link" style="display:none">
+  <%= link_to_function "Login using username and password", %/$("login").toggle(); $("openid").toggle(); $("login_link").toggle(); $("openid_link").toggle(); $('authentication_username').focus()/ %>
+</small>
+<div>
