@@ -14,11 +14,11 @@
       <div class="label">
         Email address:
       </div>
-      <%= text_field_tag :email, "", :style => "width:355px" %>
+      <%= text_field_tag :email, "", :style => "width:355px; font-size:1.3em" %>
     </div>
 
     <div class="buttonbar">
-      <%= submit_tag "Reset Password" %>
+      <%= submit_tag "Reset Password", :style => "font-size:1.2em" %>
     </div>
 
   <% end -%>
